--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    android:id="@+id/intercepted_notification_logo_container">
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@color/black">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/intercepted_notification_logo"
-        android:src="@drawable/notification_logo"
-        android:contentDescription="@string/notification_logo"
-        android:layout_gravity="center" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/image_change_explanaton"
+        android:id="@+id/image_change_explanation"
+        android:textColor="@color/white"
+        android:layout_marginTop="18.5dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="18dp"
+        android:textSize="18sp"
+        android:typeface="monospace"
+        android:textAlignment="center" />
 
-</FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/intercepted_notification_logo_container">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/intercepted_notification_logo"
+            android:src="@drawable/notification_logo"
+            android:contentDescription="@string/notification_logo"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
+
+</LinearLayout>
