--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:background="@color/black">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/image_change_explanaton"
+        android:text="@string/image_change_explanation"
         android:id="@+id/image_change_explanation"
-        android:textColor="@color/white"
         android:layout_marginTop="18.5dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
